python-server-main/k8s_backup/spring/ingress.yaml
# spring-service Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-service
spec:
  rules:
    - host: spring.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8099
